Test 탭 일시정지 공유 기능 추가

--- a/html/settings.html
+++ b/html/settings.html
@@ -273,6 +273,25 @@
                         />
                     </div>
                 </li>
+                <!-- 다른 텝과 공유 -->
+                <li gm_setting_key="autoPauseOtherClipsForShareTabs" class="NCTCL_setting_depth2" infrequent>
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">다른 탭과 재생 현황 공유</span>
+                        <span class="NCTCL_setting_desc">2개 이상의 탭 또는 브라우저 창을 띄워두고 사용하는 경우에도 일시정지가 공유되도록 제어합니다.</span></div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input 
+                            class="form-control" 
+                            autocomplete="off" 
+                            autocorrect="off" 
+                            autocapitalize="off" 
+                            spellcheck="false" 
+                            type="checkbox" 
+                            name="autoPauseOtherClipsForShareTabs" 
+                            toggle="autoPauseOtherClips:true"
+                        />
+                    </div>
+                </li>
                 <li gm_setting_key="removeOriginalLinks" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
