Feat 트위치 클립 재생 시에 라이브 중인 방송이 안내로 나오는 사이드탭 제거 기능 추가 (#11)

--- a/html/settings.html
+++ b/html/settings.html
@@ -330,6 +330,20 @@
                         />
                     </div>
                 </li>
+                <li gm_setting_key="hideClipLiveRecommendations" class="NCTCL_setting_depth1" infrequent>
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">클립 재생 시 생방송 추천 숨김</span>
+                        <span class="NCTCL_setting_desc">
+                            클립 중 생방송 추천에 대한 안내를 숨깁니다<br>
+                            (클립 시청 도중 발생하는 생방송 알림바를 직접 닫지 않아도 됩니다)
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input class="form-control" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                            type="checkbox" name="hideClipLiveRecommendations" />
+                    </div>
+                </li>
                 <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
