--- a/html/settings.html
+++ b/html/settings.html
@@ -16,7 +16,7 @@
                 <div style="height: 25px; display: inline-block; white-space: nowrap;">Settings</div>
                 <div style="display: flex; height: 25px; float: right;">
                     <a href="https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/" target="_blank" style="font-size: 12px; font-weight: normal; align-self: flex-end; overflow: hidden;">
-                        Naver-Cafe-Twitch-Clip-Extension v0.1.3 (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
+                        Naver-Cafe-Twitch-Clip-Extension (https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension/)
                     </a>
                 </div>
                 <div>
@@ -273,8 +273,29 @@
                         />
                     </div>
                 </li>
-                <li gm_setting_key="removeOriginalLinks" class="NCTCL_setting_depth1">
+                <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">Twitch Clip 페이지 스타일로 표시</span>
+                        <span class="NCTCL_setting_desc">
+                            클립 화면을 클릭하여 재생 및 일시정지 되도록 만듭니다. (편하다!)<br>
+                            일시정지 시 상단 오버레이와 재생 버튼을 숨깁니다. 재생 중 화면을 더블 클릭하여 전체화면을 할 수 있습니다.
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input 
+                            class="form-control" 
+                            autocomplete="off" 
+                            autocorrect="off" 
+                            autocapitalize="off" 
+                            spellcheck="false" 
+                            type="checkbox" 
+                            name="playAndPauseByClick"
+                        />
+                    </div>
+                </li>
+                <li gm_setting_key="removeOriginalLinks" class="NCTCL_setting_category NCTCL_setting_depth1">
+                    <div class="NCTCL_setting_category_name">간소화 기능</div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">클립 원본 링크 삭제</span>
                         <span class="NCTCL_setting_desc">클립 링크를 비디오로 변환 시, 본문에 동일한 링크가 존재하는 경우 삭제하여 보기 좋게 만듭니다.</span>
@@ -312,7 +333,7 @@
                 <li gm_setting_key="hideClipPostplayRecommendations" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">클립 재생 후 추천 영상 숨김</span>
+                        <span class="NCTCL_setting_title">클립 종료 시 추천 영상 숨김</span>
                         <span class="NCTCL_setting_desc">
                             클립 재생 후에 나오는 추천 영상을 숨겨줍니다.<br>
                             (추천 영상으로 문제가 있는 영상이 보이는 것을 방지합니다)
@@ -344,25 +365,30 @@
                             type="checkbox" name="hideClipLiveRecommendations" />
                     </div>
                 </li>
-                <li gm_setting_key="playAndPauseByClick" class="NCTCL_setting_depth1" infrequent>
+                <li gm_setting_key="hideYoutubeEndScreenContents" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
-                        <span class="NCTCL_setting_title">Twitch Clip 페이지 스타일로 표시</span>
+                        <span class="NCTCL_setting_title">유튜브 영상 종료 시 추천 영상 숨김</span>
                         <span class="NCTCL_setting_desc">
-                            클립 화면을 클릭하여 재생 및 일시정지 되도록 만듭니다. (편하다!)<br>
-                            일시정지 시 상단 오버레이와 재생 버튼을 숨깁니다. 재생 중 화면을 더블 클릭하여 전체화면을 할 수 있습니다.
+                            유튜브 영상 종료 시에 나오는 추천되는 영상을 숨깁니다
                         </span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
-                        <input 
-                            class="form-control" 
-                            autocomplete="off" 
-                            autocorrect="off" 
-                            autocapitalize="off" 
-                            spellcheck="false" 
-                            type="checkbox" 
-                            name="playAndPauseByClick"
-                        />
+                        <input class="form-control" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                            type="checkbox" name="hideYoutubeEndScreenContents" />
+                    </div>
+                </li>
+                <li gm_setting_key="hideYoutubePauseOverlayContents" class="NCTCL_setting_depth1" infrequent>
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">유튜브 영상 일시정지 시 더보기 영상 숨김</span>
+                        <span class="NCTCL_setting_desc">
+                            유튜브 영상 일시정지 시에 나오는 추천 더보기 영상을 숨깁니다
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input class="form-control" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                            type="checkbox" name="hideYoutubePauseOverlayContents" />
                     </div>
                 </li>
                 <!-- 편의 기능 -->
@@ -405,7 +431,7 @@
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
                         <span class="NCTCL_setting_title">자주 사용하지 않는 옵션을 숨기기</span>
-                        <span class="NCTCL_setting_desc">설정 페이지에서 자주 사용하지 않는 옵션을 숨깁니다.</span>
+                        <span class="NCTCL_setting_desc">설정 페이지에서 자주 사용하지 않거나 변경하지 않는 옵션을 숨깁니다.</span>
                     </div>
                     <div class="NCTCL_setting_input_container form-group">
                         <input 
