--- a/html/settings.html
+++ b/html/settings.html
@@ -426,7 +426,26 @@
                         />
                     </div>
                 </li>
-                <!-- 전체화면 스크롤 동작 개선 -->
+                <!-- 네이버 영상 새로고침 기능 -->
+                <li gm_setting_key="refreshNaverVideoErrorOcurred" class="NCTCL_setting_depth1">
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">네이버 영상 오류 시 새로고침</span>
+                        <span class="NCTCL_setting_desc">네이버 영상 재생 시 오류가 발생하는 경우 해당 영상만을 새로고침 할 수 있는 버튼을 생성합니다.</span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input 
+                            class="form-control" 
+                            autocomplete="off" 
+                            autocorrect="off" 
+                            autocapitalize="off" 
+                            spellcheck="false" 
+                            type="checkbox"  
+                            name="refreshNaverVideoErrorOcurred"
+                        />
+                    </div>
+                </li>
+                <!-- 자주 사용하지 않는 옵션 숨기기 -->
                 <li gm_setting_key="hideInfrequentlyFeature" class="NCTCL_setting_depth1">
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
