Feat 유튜브 임베디드 동영상 재생 시에 배너 광고 숨김 기능 추가

--- a/html/settings.html
+++ b/html/settings.html
@@ -365,6 +365,20 @@
                             type="checkbox" name="hideClipLiveRecommendations" />
                     </div>
                 </li>
+                <!-- hideYoutubeVideoBannerAds -->
+                <li gm_setting_key="hideYoutubeVideoBannerAds" class="NCTCL_setting_depth1">
+                    <div class="NCTCL_setting_category_blank"></div>
+                    <div class="NCTCL_setting_list_head">
+                        <span class="NCTCL_setting_title">유튜브 배너 광고 숨김</span>
+                        <span class="NCTCL_setting_desc">
+                            유튜브 영상 재생 도중에 발생하는 배너 광고를 숨깁니다
+                        </span>
+                    </div>
+                    <div class="NCTCL_setting_input_container form-group">
+                        <input class="form-control" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
+                            type="checkbox" name="hideYoutubeVideoBannerAds" />
+                    </div>
+                </li>
                 <li gm_setting_key="hideYoutubeEndScreenContents" class="NCTCL_setting_depth1" infrequent>
                     <div class="NCTCL_setting_category_blank"></div>
                     <div class="NCTCL_setting_list_head">
